--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4",
+    "validator": "^13.7.0"
   }
 }
