--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,6 @@
 {
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "no-unused-vars": ["error", { "args": "none" }],
-    "linebreak-style": 0
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   },
   "extends": "airbnb-base"
 }
